--- a/web/.cascadr/templates/side-navigation.template
+++ b/web/.cascadr/templates/side-navigation.template
@@ -1,7 +1,7 @@
 
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-light navbar-light">
-                <a href="index.html" class="navbar-brand mx-4 mb-3">
+                <a href="dashboard.html" class="navbar-brand mx-4 mb-3">
                     <h5 class="text-primary"><i class="fa fa-hashtag me-2"></i>NapkinExchange</h5>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
@@ -14,9 +14,33 @@
                         <span id="sidebarTraderBalance">--</span>
                     </div>
                 </div>
+
                 <div class="navbar-nav w-100">
-                    <a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-                    <div class="nav-item dropdown">
+
+
+
+<a href="dashboard.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+
+
+
+
+
+
+<a href="buysell.html" class="nav-item nav-link">
+
+<i class="fa fa-keyboard me-2"></i>
+
+Buy/Sell
+
+</a>
+                 
+ 
+
+
+
+
+
+   <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
                         <div class="dropdown-menu bg-transparent border-0">
                             <a href="button.html" class="dropdown-item">Buttons</a>
