--- a/web/.cascadr/templates/sidebar.template
+++ b/web/.cascadr/templates/sidebar.template
@@ -21,10 +21,16 @@
 
 <a href="dashboard.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
 
+<a href="dashboard2.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard 2</a>
 
 
+<a href="profile.html" class="nav-item nav-link">
 
+<i class="fa fa-keyboard me-2"></i>
 
+Profile
+
+</a>
 
 <a href="buysell.html" class="nav-item nav-link">
 
@@ -33,13 +39,41 @@
 Buy/Sell
 
 </a>
-                 
- 
+     
+
+<a href="leaderboard.html" class="nav-item nav-link">
+
+<i class="fa fa-keyboard me-2"></i>
+
+Leaderboard033
+
+</a>
+
+            
+<a href="notifications.html" class="nav-item nav-link">
+
+<i class="fa fa-keyboard me-2"></i>
+
+Notifications
+
+</a> 
+
+<a href="monitor.html" class="nav-item nav-link">
+
+<i class="fa fa-keyboard me-2"></i>
+
+Monitor
+
+</a> 
 
 
+<a target="template" href="https://themewagon.github.io/dashmin/" class="nav-item nav-link">
 
+<i class="fa fa-keyboard me-2"></i>
 
+template
 
+</a> 
    <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
                         <div class="dropdown-menu bg-transparent border-0">
@@ -48,10 +82,7 @@ Buy/Sell
                             <a href="element.html" class="dropdown-item">Other Elements</a>
                         </div>
                     </div>
-                    <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
-                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
-                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
+                    
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
                         <div class="dropdown-menu bg-transparent border-0">
@@ -59,7 +90,18 @@ Buy/Sell
                             <a href="signup.html" class="dropdown-item">Sign Up</a>
                             <a href="404.html" class="dropdown-item">404 Error</a>
                             <a href="blank.html" class="dropdown-item">Blank Page</a>
-                        </div>
+                      
+
+<a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
+                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
+                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
+                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
+
+
+
+
+
+  </div>
                     </div>
                 </div>
             </nav>
