market watch charting and security history corrected

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+
+##
+## hack: when asking for the security through rest we get error. this is hack. db loading is incorrect.
+##will fix another day. application networking configuration
+## com.fasterxml.jackson.databind.exc.InvalidDefinitionException: No serializer found for class org.hibernate.proxy.pojo.bytebuddy.ByteBuddyInterceptor and no properties discovered to create BeanSerializer (to avoid exception, disable SerializationFeature.FAIL_ON_EMPTY_BEANS) (through reference chain: java.util.ArrayList[0]->digital.softwareshinobi.napkinexchange.security.model.SecurityPricingHistory["stock"]->digital.softwareshinobi.napkinexchange.security.model.Security$HibernateProxy$TaHPtEWZ["hibernateLazyInitializer"])
+##https://stackoverflow.com/questions/52656517/no-serializer-found-for-class-org-hibernate-proxy-pojo-bytebuddy-bytebuddyinterc
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
 ##
 ## application networking configuration
 ##
@@ -40,7 +49,7 @@ spring.jpa.show-sql=false
 
 spring.jpa.generate-ddl=false
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.open-in-view=true
 
