--- a/web/.cascadr/templates/head.template
+++ b/web/.cascadr/templates/head.template
@@ -1,3 +1,5 @@
+<link rel="icon" type="image/png" href="favicon.png" />
+
 <meta charset="utf-8">
 
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -5,8 +7,6 @@
 <meta content="" name="keywords">
 
 <meta content="" name="description">
-
-<link href="img/favicon.ico" rel="icon">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 
